--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-PORT=
-DB_URI=
+PORT=5000
+TEST_DB_URI=
+PROD_DB_URI=
 SOURCE_EMAIL=
 SOURCE_EMAIL_APP_PASSWORD=
 EVENT_NAME=
+JWT_SECRET=
+CIPHER_KEY=
+CIPHER_IV=
+CIPHER_ALGORITHM=
