--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "nodevento",
+  "name": "backevento",
   "version": "1.0.0",
-  "description": "NodeJS event management API for virtual and in-person events",
+  "description": "NodeJS backend for official SCCSBS events",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
   },
   "keywords": [],
-  "author": "Raja Majumdar (raja.majumdar.01@gmail.com)",
+  "author": "SCCSBS (sccsbsaot@gmail.com)",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
